@@ -4,6 +4,7 @@
 - Update the selection highlighting to more closely follow the focus
 - Fix the focus jumping around on resize
 - Fix the grid not grabbing the focus on Back
+- Fix Reset Board not correctly resetting the Timer
 - Fix the earmark picker buttons not having an Accessible label
 
 48.beta - January 31, 2025
